# -E-commerce-Churn-Model-S03-26-Equipo-40-Data-Science

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci_pipeline.yml
Dashboard/webapp/: app.py  components.py  data_loader.py
Dashboard/webapp/pages/: 1_Resumen_Ejecutivo.py  2_Predicciones_ML.py  3_Valor_Riesgo.py  4_RFM_Segmentacion.py  5_Plan_Accion.py
config/: config.yaml  logging_config.yaml
data/raw/: dataset_version.json
docs/: data_dictionary.md  model_card.md  powerbi_setup_guide.md
monitoring/: __init__.py  drift_detector.py
notebooks/: 01_eda.ipynb  02_churn_definition.ipynb  03_feature_engineering.ipynb  04_modeling_experiments.ipynb  05_shap_interpretability.ipynb  06_segmentation_analysis.ipynb  07_executive_summary.ipynb
pipelines/: __init__.py  run_export_pipeline.py  run_full_pipeline.py  run_inference_pipeline.py  run_training_pipeline.py
reports/: executive_report.md  insights.md  metrics.md
scripts/: run_pipeline.py
sql/: policies.sql  schema.sql  views.sql
sql/migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_add_model_runs_table.sql
src/: __init__.py  churn_label.py  export_to_supabase.py  model.py  preprocessing.py  segmentation.py
src/data/: __init__.py  loader.py  validator.py  versioner.py
src/export/: __init__.py  csv_exporter.py  schema_deployer.py  supabase_connector.py
src/features/: __init__.py  advanced_features.py  preprocessing.py  rfm_builder.py  scaler.py
src/labeling/: __init__.py  churn_label.py  threshold_analyzer.py
src/modeling/: __init__.py  evaluator.py  interpreter.py  registry.py  trainer.py
src/segmentation/: __init__.py  customer_profiler.py  rfm_segmenter.py  risk_segmenter.py
tests/: conftest.py
tests/unit/: test_churn_label.py  test_preprocessing.py  test_segmentation.py
